# phd-notes

./: .gitmodules
Fall 2025/CMM/Aug-26/: notes.ipynb
Fall 2025/CMM/Aug-28/: notes.ipynb
Fall 2025/CMM/Sep-02/: notes.ipynb
Fall 2025/CMM/Sep-04/: notes.ipynb
Fall 2025/ECE-60800/: .gitignore  notes.ipynb
Fall 2025/ECE-60852/: .gitignore  notes.ipynb
Fall 2025/ECE-60852/assignments/assignment1/: Dockerfile  docker-compose.yml
Fall 2025/ECE-60852/assignments/assignment2/: build_and_run.sh
Fall 2025/HSS/Assignment0/: Ricardo Calvo - assignment0 .ipynb  test  test.c  test.cpp
Fall 2025/HSS/Assignment1/: Dockerfile  docker-compose.yml
Fall 2025/HSS/Assignment1/part2/: build_and_run.sh
Fall 2025/HSS/Aug-27/: notes.ipynb
Fall 2025/HSS/Aug-29/: notes.ipynb
Fall 2025/HSS/Sep-03/: notes.ipynb
Fall 2025/HSS/Sep-05/: main.bc  main.ll  notes.ipynb
Fall_2025/ECE-60852/: .gitignore
Fall_2025/ECE-60852/assignments/assignment2/: Dockerfile  build_and_run.sh
Fall_2025/ECE-60852/assignments/assignment2/LLVMBasedDSE/DSE/: CMakeLists.txt
Fall_2025/ECE-60852/assignments/assignment3/: summary.py
Spring_2026/ECE-50874/goto/: goto.c
Spring_2026/ECE-50874/group_project/: .env-template  .gitignore  README.md
Spring_2026/ECE-50874/group_project/inputs/: input_queries.csv
Spring_2026/ECE-50874/group_project/scripts/: github_repo_search_cli.py  poc_size_slices.py
Spring_2026/ECE-50874/labs/lab1/: Readme.md  traffic.pml
Spring_2026/ECE-50874/labs/lab2/: prompt.txt  (+4 more)
Spring_2026/ECE-50874/solo-project/: diagrams.drawio
Spring_2026/STAT-51400/: midterm2.tex
(+266 files in other folders)
